# calibrated_explanations

./: .codespellrc  .coveragerc  .gitignore  .mcp.example.json  .pre-commit-config.yaml  .readthedocs.yaml  .sourcery.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  ANALYSIS_DELIVERY_SUMMARY.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_INSTRUCTIONS.md  EXAMPLES_INDEX.json  GEMINI.md  GOVERNANCE.md  LICENSE  METADATA.json  Makefile  PROMPTS.md  QUICK_API.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TERMINOLOGY_ANALYSIS_THRESHOLDED_VS_PROBABILISTIC_REGRESSION.md  THIRD_PARTY_NOTICES.md  benchmarksbaseline_20250820.json  check_tabs.py  codecov.yml  constraints.txt  docstring_coverage.txt  explain_template.yaml  micro_current.json  model.joblib  (+9 more)
.ai/: tool_description.yaml
.claude/: settings.json
.github/: CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  codecov.yml  copilot-feedback-log.md  copilot-instructions.md  dependabot.yml  marker-hygiene-baseline.json  private_member_allowlist.json  pull_request_template.md  test-quality-baseline.json  tests-guidance.md
artifacts/: notebook_audit.json
benchmarks/: api_public_20250816_100922.txt  baseline_20250816.json  baseline_20250820.json  baseline_20250822.json  baseline_20251027.json  micro_20250816.json  perf_thresholds.json
calibrated_explanations/: _explanations.py  core.py
ce/: __init__.py  _explanations.py  core.py
coverage/: __init__.py
data/: colic.csv  creditA.csv  data_clean_molding.csv  diabetes.csv  diabetes_full.csv  german.csv  haberman.csv  heartC.csv  heartH.csv  heartS.csv  hepati.csv  iono.csv  je4042.csv  je4243.csv  kc1.csv  kc2.csv  kc3.csv  liver.csv  liver_full.csv  mushroom.csv  pc1req.csv  pc4.csv  sonar.csv  spect.csv  spectf.csv  transfusion.csv  ttt.csv  vote.csv  vote_full.csv  wbc.csv
development/: README.md
doc/: release.md
docs/: .buildinfo  OWNERS.md  ROADMAP.md  api_reference.rst  architecture.md  calibrated-explanations.rst  calibrated_explanations.core.rst  calibrated_explanations.explanations.rst  calibrated_explanations.rst  calibrated_explanations.utils.helper.rst  calibrated_explanations.utils.rst  citing.md  compare.md  conf.py  contributing.md  demo_multiclass.ipynb  genindex.html  getting_started.md  getting_started_60s.md  index.html  index.md  index.rst  migration_0_5_to_0_6.md  multiclass_all_classes_gap_analysis.md  objects.inv  over_testing_method.md  plugins.md  pr_guide.md  requirements-doc.txt  schema_v1.md  search.html  searchindex.js  tutorials.rst  viz_plotspec.md
docs_old/: architecture.md  calibrated_explanations.rst  citing.md  contributing.md  error_handling.md  make.bat  plugins.md  requirements-doc.txt  viz_plotspec.md
evaluation/: Classification stab rob.ipynb  Classification_Analysis_Ablation.ipynb  Classification_Analysis_sota.ipynb  Classification_Analysis_stab_rob.ipynb  Classification_Experiment stab rob.py  Classification_Experiment_Ablation.py  Classification_Experiment_sota.py  Classification_Experiment_stab_rob.py  Classification_plots.ipynb  Classification_stab_rob.ipynb  Conditional_Fairness_Experiment.ipynb  Mondrian_Fairness.ipynb  Mondrian_Fairness_Experiment.ipynb  README.md  __init__.py  binary_classification_evalöuation.ipynb  caching_ablation.py  caching_ablation_results.json  chunk_size_ablation.py  chunk_size_ablation_results.json  conjunction_ablation.py  conjunction_ablation_results.json  environment.yml  explain_performance.md  fast_feature_filtering_ablation.py  fast_feature_filtering_ablation_results.json  parallel_ablation.py  parallel_ablation_results.json  reject_policy_ablation.py  reject_policy_ablation_results.json  requirements.txt  serialization_example.py  setup_ablation.py  setup_ablation_results.json  sota_comparison_ablation.py  sota_comparison_results.json  synthetic_feature_sweep_results.json
external_plugins/: README.md
improvement_docs/: ACTION_PLAN.md  ADR-001-STAGE-4-COMPLETION-REPORT.md  ADR-001-STAGE-5-COMPLETION-REPORT.md  ADR-017_nomenclature_remediation.md  ADR-gap-analysis.md  DEVELOPMENT_PLAN.md  OSS_CE_scope_and_gaps.md  PLUGIN_GAP_CLOSURE_PLAN.md  RELEASE_PLAN_v1.md  STAGE-2-COMPLETION-SUMMARY.md  STAGE-3-ANALYSIS-DELIVERABLES.md  STAGE-3-ANALYSIS-SUMMARY.md  START-HERE-STAGE-3.md  TERMINOLOGY_ANALYSIS_THRESHOLDED_VS_PROBABILISTIC_REGRESSION.md  api_contract.md  code_doc_standardization_plan.md  code_documentation_uplift.md  component_diagram.md  coverage_uplift_plan.md  documentation_information_architecture.md  documentation_overhaul.md  documentation_review.md  documentation_standardization_plan.md  explain_plugin_refactoring_summary.md  legacy_user_api_contract.md  maintainer_sync_v0.8.0.md  nomenclature_review.md  nomenclature_standardization_plan.md  parallel_execution_improvement_plan.md  pydocstyle_breakdown.md  test_coverage_assessment.md  test_coverage_gap_plan.md  test_coverage_standardization_plan.md  test_policy_analysis.md  test_reorg_plan.md
notebooks/: README.md  README_narrative.md  demo_binary_classification.ipynb  demo_multiclass.ipynb  demo_narrative_explanations.ipynb  demo_plugin_wiring.ipynb  demo_probabilistic_regression.ipynb  demo_regression.ipynb  demo_reject.ipynb  demo_reject_fixed.ipynb  demo_speeddating.ipynb  demo_under_the_hood.ipynb  fast_feature_filtering_demo.ipynb  imbalanced_wrap.ipynb  mondrian_regression.ipynb  narrative_demo.ipynb  quickstart.ipynb  quickstart_guarded.ipynb  quickstart_tiny.ipynb  quickstart_wrap.ipynb  quickstart_wrap_oob.ipynb  support_xgboost_lightgbm_catboost_issue_92.ipynb  test_calibrated_explanations.py
reports/: benchmarksbaseline_20250820.json  config_manager_usage_report.json  docstring_coverage_20251010.txt  docstring_coverage_20251025.txt  docstring_coverage_20251223.txt  nomenclature_violation_inventory.json  private_usage_scan.csv  pydocstyle-baseline.txt  pydocstyle-current.txt  streaming_benchmark_v0.10.1.json  (+2 more)
tests/fixtures/ce_mock_modality_plugin/: pyproject.toml
tests/fixtures/ce_mock_modality_plugin/ce_mock_modality_plugin/: __init__.py
(+2286 files in other folders)
