[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calibrated_explanations"
version = "0.5.1"
authors = [
  { name="Helena Löfström", email="helena.lofstrom@ju.se" },
  { name="Tuwe Löfström", email="tuwe.lofstrom@ju.se" },
]
description = "Extract calibrated explanations from machine learning models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  'crepes',
  'venn-abers',
  'ipython',
  'lime',
  'matplotlib',
  'numpy',
  'pandas',
  'scikit-learn',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Documentation" = "https://calibrated-explanations.readthedocs.io/en/latest/?badge=latest"
"Changelog" = "https://github.com/Moffran/calibrated_explanations/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Moffran/calibrated_explanations/issues"
"Repository" = "https://github.com/Moffran/calibrated_explanations"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------
# Tooling / Quality Gates (Phase 0)
# ----------------------------
[tool.ruff]
target-version = "py38"
line-length = 100
extend-exclude = ["build", "dist", "benchmarks", "docs/_build", "notebooks", "scripts", "evaluation"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
  "C4", # comprehensions
  "SIM",# simplify
  "NPY",# NumPy
  "S",  # security (bandit-like)
]
ignore = [
  "E501",    # line length (managed by formatter)
  "S101",    # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.8"
packages = ["calibrated_explanations"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
show_error_codes = true
exclude = ["build", "benchmarks", "docs", "notebooks", "scripts", "evaluation"]

[tool.bandit]
skips = ["B101"]
exclude = ["tests", "build", "benchmarks", "notebooks", "scripts", "docs", "dist", "evaluation"]

[tool.codespell]
ignore-words-list = "dataframe,nd"
skip = "notebooks,scripts,evaluation,benchmarks,build,dist,*.lock,*.csv,*.json,*.png,*.jpg,*.gif,*.zip"
